# MeloTTS.cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README.zh-CN.md  README.zh-TW.md  inputs.txt  melo.cpp  run_tts.bat
experimental/: openvino_tokenizer.cpp  openvino_tokenizer.h
experimental/bert-base-multilingual-uncased/: README.md  openvino_tokenizer.xml
ov_models/: cmudict_cache.txt  cmudict_cache_order.txt  punc.dic
scripts/: cmudict_cache.py
src/: Text_normlization.cpp  Text_normlization.h  bert.cpp  bert.h  char_convert.cpp  char_convert.h  chronology.cpp  chronology.h  constant.h  constants.cpp  dfnet_model.cpp  dfnet_model.h  multiframe.h  num.cpp  num.h  number.h  openvino_model_base.cpp  openvino_model_base.h  openvoice_tts.cpp  openvoice_tts.h  parse_args.h  phonecode.cpp  phonecode.h  quantifier.cpp  quantifier.h  tokenizer.cpp  tokenizer.h  tts.cpp  tts.h  utils.cpp  utils.h
src/deepfilter_net/: README.md  deepfilter.cpp  deepfilter.h  dfnet_model.cpp  dfnet_model.h  multiframe.cpp  multiframe.h  noisefilter.cpp  noisefilter.h
src/language_modules/: chinese_mix.cpp  chinese_mix.h  cmudict.cpp  cmudict.h  tone_sandhi.cpp  tone_sandhi.h
src/text_normalization/: char_convert.cpp  char_convert.h  chronology.cpp  chronology.h  constant.h  constants.cpp  num.cpp  number.h  phonecode.cpp  phonecode.h  quantifier.cpp  quantifier.h  text_normalization.cpp  text_normalization.h
tests/: CMakeLists.txt  test_bert.cpp  test_darts.cpp  test_openvino_tokenizer.cpp  test_openvoice_tts.cpp  test_split_sentence.cpp  test_tokenizer.cpp  test_wordbreak.cpp
